# virtual-display

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  virtual-display.spec
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: copr-release.yml
assets/: 50-virtual-display-daemon.preset  virtual-display-daemon.service  virtual-display.spec
src/: gpu_info.rs  main.rs
workspaces/cli/: Cargo.toml
workspaces/cli/src/: arguments.rs  cli.rs  commands.rs  main.rs  socket.rs
workspaces/cli/src/commands/: daemon.rs  display.rs
workspaces/common/: Cargo.toml
workspaces/common/src/: api.rs  logging.rs
workspaces/daemon/: Cargo.toml
workspaces/daemon/src/: daemon.rs  gpu_info.rs  main.rs  requests.rs  state.rs  status.rs  virtual_display.rs
