[workspace]
members = ["workspaces/daemon", "workspaces/cli", "workspaces/common"]
resolver = "3"

[workspace.package]
name = "virtual-display"
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
common = { path = "workspaces/common" }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sudo = "0.6.0"
systemctl = "0.5.0"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "io-util",
    "sync"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
