[package]
name = "virtual-display"
version = { workspace = true }
edition = { workspace = true }
description = "Virtual Display CLI"

[[bin]]
name = "virtual-display"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
systemctl = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
