[package]
name = "daemon"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "virtual-display-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sudo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
